--- a/index.html
+++ b/index.html
@@ -81,16 +81,12 @@ input:focus, textarea:focus { border:1px solid #d4af37; }
 
 <div style="position:relative; margin-top:10px;">
 <textarea id="prompt" style="width:100%; height:90px; padding:10px; border-radius:10px; border:1px solid #ccc; resize:none;" placeholder="Describe your case..."></textarea>
-<button onclick="activarVoz()" style="position:absolute; right:10px; bottom:10px; border:none; background:white; cursor:pointer; font-size:22px; border-radius:50%; width:40px; height:40px; box-shadow:0 2px 5px rgba(0,0,0,0.2);">🎤</button>
+<button onclick="activarVoz()" style="position:absolute; right:50px; bottom:10px; border:none; background:white; cursor:pointer; font-size:22px; border-radius:50%; width:40px; height:40px; box-shadow:0 2px 5px rgba(0,0,0,0.2);">🎤</button>
+<button onclick="escuchar()" style="position:absolute; right:10px; bottom:10px; border:none; background:#d4af37; cursor:pointer; font-size:22px; border-radius:50%; width:40px; height:40px; box-shadow:0 2px 5px rgba(0,0,0,0.2);">🔊</button>
 </div>
 
-<button class="btn-main" style="background:#1b5e20;" onclick="run()">GET SOLUTION</button>
+<button class="btn-main" style="background:#1b5e20;" onclick="preRun()">GET SOLUTION</button>
 <div id="res"></div>
-
-<!-- BOTÓN DE BOCINA PARA ESCUCHAR RESPUESTA -->
-<div style="margin-top:5px; text-align:right;">
-  <button class="btn-main" id="btnListen" style="background:#ff9900; font-size:12px; width:100px;" onclick="speakResult()">🔊 Listen</button>
-</div>
 
 <div class="grid">
 <button class="btn-main" style="background:#25D366;font-size:9px;" onclick="ws()">WhatsApp</button>
@@ -99,16 +95,5 @@ input:focus, textarea:focus { border:1px solid #d4af37; }
 </div>
 </div>
 <script src="app.js"></script>
-<script>
-/* Función para reproducir la respuesta en voz */
-function speakResult() {
-    const text = document.getElementById('res').innerText;
-    if(!text) return;
-    const utter = new SpeechSynthesisUtterance(text);
-    const lang = document.getElementById('userLang').value;
-    utter.lang = lang==='es'?'es-ES':'en-US';
-    window.speechSynthesis.speak(utter);
-}
-</script>
 </body>
 </html>
